{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 181,
  "lineage": "5271320d-e55b-6066-2ebc-fe48d5bc0928",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "lab01-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/dfc1c669-4460-40a1-8d6a-3469f2b10f23/resourceGroups/TST-WEUR-TFLAB1/providers/Microsoft.Network/networkInterfaces/TST-WEUR-NIC01",
            "internal_domain_name_suffix": "gsjwduxjc40elny0qrw4ig23qa.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "nic-config",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/dfc1c669-4460-40a1-8d6a-3469f2b10f23/resourceGroups/TST-WEUR-TFLAB1/providers/Microsoft.Network/publicIPAddresses/TST-WEUR-PUBIP01",
                "subnet_id": "/subscriptions/dfc1c669-4460-40a1-8d6a-3469f2b10f23/resourceGroups/TST-WEUR-TFLAB1/providers/Microsoft.Network/virtualNetworks/TST-WEUR-VNET01/subnets/TST-WEUR-SUBNET01"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-2A-6B-F4",
            "name": "TST-WEUR-NIC01",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "TST-WEUR-TFLAB1",
            "tags": {
              "BillingCode": "201219DN",
              "Company": "DordoLabs",
              "Environment": "TST",
              "Project": "DordoLabs-lab01"
            },
            "virtual_machine_id": "/subscriptions/dfc1c669-4460-40a1-8d6a-3469f2b10f23/resourceGroups/TST-WEUR-TFLAB1/providers/Microsoft.Compute/virtualMachines/TST-WEUR-VMLinux01"
          },
          "dependencies": [
            "azurerm_public_ip.lab01-PubIP",
            "azurerm_resource_group.rg-01",
            "azurerm_subnet.lab01-subnet",
            "azurerm_virtual_network.lab01-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "lab01-nsgnic-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dfc1c669-4460-40a1-8d6a-3469f2b10f23/resourceGroups/TST-WEUR-TFLAB1/providers/Microsoft.Network/networkInterfaces/TST-WEUR-NIC01|/subscriptions/dfc1c669-4460-40a1-8d6a-3469f2b10f23/resourceGroups/TST-WEUR-TFLAB1/providers/Microsoft.Network/networkSecurityGroups/lab01NetworkSecurityGroup",
            "network_interface_id": "/subscriptions/dfc1c669-4460-40a1-8d6a-3469f2b10f23/resourceGroups/TST-WEUR-TFLAB1/providers/Microsoft.Network/networkInterfaces/TST-WEUR-NIC01",
            "network_security_group_id": "/subscriptions/dfc1c669-4460-40a1-8d6a-3469f2b10f23/resourceGroups/TST-WEUR-TFLAB1/providers/Microsoft.Network/networkSecurityGroups/lab01NetworkSecurityGroup"
          },
          "dependencies": [
            "azurerm_network_interface.lab01-nic",
            "azurerm_network_security_group.lab01-nsg-nic",
            "azurerm_public_ip.lab01-PubIP",
            "azurerm_resource_group.rg-01",
            "azurerm_subnet.lab01-subnet",
            "azurerm_virtual_network.lab01-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "lab01-nsg-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dfc1c669-4460-40a1-8d6a-3469f2b10f23/resourceGroups/TST-WEUR-TFLAB1/providers/Microsoft.Network/networkSecurityGroups/lab01NetworkSecurityGroup",
            "location": "westeurope",
            "name": "lab01NetworkSecurityGroup",
            "resource_group_name": "TST-WEUR-TFLAB1",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "BillingCode": "201219DN",
              "Company": "DordoLabs",
              "Environment": "TST",
              "Project": "DordoLabs-lab01"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg-rule-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/dfc1c669-4460-40a1-8d6a-3469f2b10f23/resourceGroups/TST-WEUR-TFLAB1/providers/Microsoft.Network/networkSecurityGroups/lab01NetworkSecurityGroup/securityRules/HTTP",
            "name": "HTTP",
            "network_security_group_name": "lab01NetworkSecurityGroup",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "TST-WEUR-TFLAB1",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.lab01-nsg-nic",
            "azurerm_resource_group.rg-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg-rule-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/dfc1c669-4460-40a1-8d6a-3469f2b10f23/resourceGroups/TST-WEUR-TFLAB1/providers/Microsoft.Network/networkSecurityGroups/lab01NetworkSecurityGroup/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "lab01NetworkSecurityGroup",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "TST-WEUR-TFLAB1",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.lab01-nsg-nic",
            "azurerm_resource_group.rg-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lab01-PubIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/dfc1c669-4460-40a1-8d6a-3469f2b10f23/resourceGroups/TST-WEUR-TFLAB1/providers/Microsoft.Network/publicIPAddresses/TST-WEUR-PUBIP01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.136.161.195",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "TST-WEUR-PUBIP01",
            "resource_group_name": "TST-WEUR-TFLAB1",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "BillingCode": "201219DN",
              "Company": "DordoLabs",
              "Environment": "TST",
              "Project": "DordoLabs-lab01"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "lab01-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/dfc1c669-4460-40a1-8d6a-3469f2b10f23/resourceGroups/TST-WEUR-TFLAB1/providers/Microsoft.Network/virtualNetworks/TST-WEUR-VNET01/subnets/TST-WEUR-SUBNET01",
            "name": "TST-WEUR-SUBNET01",
            "resource_group_name": "TST-WEUR-TFLAB1",
            "virtual_network_name": "TST-WEUR-VNET01"
          },
          "dependencies": [
            "azurerm_resource_group.rg-01",
            "azurerm_virtual_network.lab01-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "lab01-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/26"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d2619334-17e9-45b4-b71a-846de41b9d80",
            "id": "/subscriptions/dfc1c669-4460-40a1-8d6a-3469f2b10f23/resourceGroups/TST-WEUR-TFLAB1/providers/Microsoft.Network/virtualNetworks/TST-WEUR-VNET01",
            "location": "westeurope",
            "name": "TST-WEUR-VNET01",
            "resource_group_name": "TST-WEUR-TFLAB1",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/27",
                "id": "/subscriptions/dfc1c669-4460-40a1-8d6a-3469f2b10f23/resourceGroups/TST-WEUR-TFLAB1/providers/Microsoft.Network/virtualNetworks/TST-WEUR-VNET01/subnets/TST-WEUR-SUBNET01",
                "name": "TST-WEUR-SUBNET01"
              }
            ],
            "tags": {
              "BillingCode": "201219DN",
              "Company": "DordoLabs",
              "Environment": "TST",
              "Project": "DordoLabs-lab01"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg-01"
          ]
        }
      ]
    }
  ]
}